code cleaning (a beat)